# avpipe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  avpipe.cpp  config.h.in  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  vcpkg.json
.github/workflows/: build.yml
Gui/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  AvInfoDialog.cpp  AvInfoDialog.hpp  AvInfoDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  avinfodialog.cpp  avinfodialog.hpp  avinfodialog.ui
Gui/PropSheets/: SourcePropSheet.cpp  SourcePropSheet.hpp  SourcePropSheet.ui
Gui/Utils/: Formatting.cpp  Formatting.hpp
Gui/ViewModels/: SourceViewModel.cpp  SourceViewModel.hpp
libavxx/: Dictionary.hpp  Error.cpp  Error.hpp  FormatContext.hpp
scripts/: DeployQt.cmake
